--- a/ecommerce_project/src/components/header.css
+++ b/ecommerce_project/src/components/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: rgb(5, 16, 15);
+  background-color: rgb(185, 143, 230);
   color: white;
   padding-left: 15px;
   padding-right: 15px;
@@ -13,6 +13,8 @@
   left: 0;
   right: 0;
   height: 60px;
+  z-index: 100;
+  transition: background-color 0.3s ease;
 }
 
 .header .left-section {
@@ -39,8 +41,11 @@
 }
 
 .header .logo {
-  height: 26px;
+  height: 40px;
   margin-top: 1px;
+  object-fit: contain;
+  background: transparent;
+  mix-blend-mode: multiply;
 }
 
 .header .mobile-logo {
@@ -81,13 +86,18 @@
 }
 
 .header .search-button {
-  background-color: rgb(186, 255, 190);
+  background-color: rgb(216, 191, 255);
   border: none;
   width: 45px;
   height: 40px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   flex-shrink: 0;
+  transition: background-color 0.2s ease;
+}
+
+.header .search-button:hover {
+  background-color: rgb(196, 165, 255);
 }
 
 .header .search-icon {
@@ -136,7 +146,7 @@
 }
 
 .header .cart-quantity {
-  color: rgb(8, 79, 45);
+  color: rgb(185, 143, 230);
   font-size: 14px;
   font-weight: 700;
 
